# alchemy

./: .editorconfig  .gitignore  .nvmrc  .plzconfig  BUILD  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  example.env
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  code_of_conduct.md
engine/: .env.example  BUILD  Cargo.toml  Dockerfile
engine/src/: main.rs
engine/src/api/: http.rs  mod.rs  server.rs  test_juniper_json.rs  test_juniper_sort.rs
engine/src/api/graphql/: context.rs  mod.rs  server.rs
engine/src/api/graphql/scalars/: mod.rs  scalar_file.rs
engine/src/api/input/: filter.rs  mod.rs  string_filter.rs
engine/src/api/schema/: enums.rs  errors.rs  fields.rs  mod.rs  operations.rs  schema.rs  sort.rs  utils.rs
engine/src/api/schema/input/: filter.rs  insert.rs  mod.rs  set.rs  string_filter.rs  utils.rs
engine/src/api/schema/operations/: create.rs  get.rs  get_all.rs  mod.rs  remove.rs  remove_all.rs  update.rs  update_all.rs  utils.rs
engine/src/api/schema/scalars/: json.rs
engine/src/lib/: config.rs  mod.rs
engine/src/lib/database/: api.rs  aql.rs  arango.rs  database.rs  mod.rs
engine/src/lib/database/collection/: collection.rs  mod.rs  property.rs
engine/src/lib/database/schema/: mod.rs  native_type.rs  native_type_array.rs  property.rs  property_type.rs  rule.rs  schema.rs
engine/src/lib/schema/: entries.rs  mod.rs  properties.rs
engine/src/lib/schema/generation/: mod.rs
engine/src/meta/: mod.rs
engine/src/meta/graphql/: context.rs  mod.rs  mutation.rs  query.rs  schema.rs  server.rs
(+64 files in other folders)
