[package]
name = 'alchemy'
version = '0.1.0'
edition = '2021'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arangors_lite = '0.1'
serde = '1'
serde_json = '1'
tokio = { version = '1', features = ['sync'] }
anyhow = '1'
actix-web = '4.0.0-beta.18'
actix-cors = '0.6.0-beta.6'
juniper = '0.15'
juniper_actix = '0.4'