[package]
name = 'alchemy'
version = '0.1.0'
edition = '2021'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = '1.4'
envy = '0.4'
rust_arango = '0.1'
serde = '1'
serde_json = '1'
tokio = { version = '1', features = ['sync'] }
json = '0.12'
anyhow = '1'
actix-web = '4.0.0-beta.18'
actix-cors = '0.6.0-beta.6'
juniper = '0.15'
juniper_actix = '0.4'
juniper_codegen = '0.15.7'
graphql-parser = '0.4'